syntax = "proto3";

package Protocol;

import "Common.proto";

option csharp_namespace = "Google.Protobuf.Protocol";

message C2S_Ping{

}

message S2C_Ping{

}

message C2S_Login{
    int64 accountUid = 1;
    string token = 2;
}

message C2S_LoginTest{
    string account_name = 1;
}

message S2C_Login{
    int32 result = 1;
    repeated LobbyPlayerInfo players = 2;
}

message C2S_CreatePlayer{
    string name = 1;
}

message S2C_CreatePlayer{
    int32 result = 1;
    LobbyPlayerInfo player = 2;
}

message S2C_Connected{
    int32 result = 1;
}

message C2S_EnterGame{
    string name = 1;
}

message S2C_EnterGame{
    int32 result = 1;
    ObjectInfo object_info = 2;
}

message S2C_LeaveGame{
    int32 result = 1;
}

message S2C_Spawn{
    repeated ObjectInfo objects = 1;
}

message S2C_Despawn{
    int32 result = 1;
    repeated int32 object_ids = 2;
}

message C2S_Move {
    PositionInfo pos_info = 1;
}

message S2C_Move{
    int32 result = 1;
    int32 object_id = 2;
    PositionInfo pos_info = 3;
}

message C2S_Skill{
    SkillInfo skill_info = 1;
}

message S2C_Skill{
    int32 result = 1;
	int32 object_id = 2;
    SkillInfo skill_info = 3;
}

message S2C_ChangeHp{
    int32 result = 1;
    int32 object_id = 2;
    int32 hp = 3;
}

message S2C_Dead{
    int32 result = 1;
    int32 object_id = 2;
    int64 attacker_id = 3;
}

message C2S_Chat{
    string chat_message = 1;
}

message S2C_Chat{
    int32 result = 1;
    int32 object_id =2;
    string chat_message = 3;
}

message S2C_ItemList{
    repeated ItemInfo items = 1;
}

message S2C_AddItem{
    repeated ItemInfo items = 1;
}

message C2S_EquipItem{
    int64 item_uid = 1;
    bool equipped = 2;
}

message S2C_EquipItem{
    int32 result = 1;
    int64 item_uid = 2;
    bool equipped = 3;
}

message S2C_ChangeStat{
    StatInfo stat_info = 1;
}