syntax = "proto3";

package Protocol;

option csharp_namespace = "Google.Protobuf.Enum";

enum CreatureState{
	Creature_State_Idle = 0;
	Creature_State_Move = 1;
	Creature_State_Skill = 2;
	Creature_State_Dead = 3;
}

enum MoveDir{
	Move_Dir_Up = 0;
	Move_Dir_Down = 1;
	Move_Dir_Left = 2;
	Move_Dir_Right = 3;
}

enum GameObjectType{
	Game_Object_Type_None = 0;
	Game_Object_Type_Player = 1;
	Game_Object_Type_Monster = 2;
	Game_Object_Type_Projectile = 4;
}

enum SkillType{
	Skill_Type_None = 0;
	Skill_Type_Auto = 1;
	Skill_Type_Projectile = 2;
}

enum ServerState{
	Server_State_Login = 0;
	Server_State_Lobby = 1;
	Server_State_InGame = 2;
}

enum ItemType{
	Item_Type_None = 0;
	Item_Type_Weapon = 1;
	Item_Type_Armor = 2;
	Item_Type_Consumable = 3;
}

enum WeaponType{
	Weapon_Type_None = 0;
	Weapon_Type_Sword = 1;
	Weapon_Type_Bow = 2;
	Weapon_Type_Staff = 3;
}

enum ArmorType{
	Armor_Type_None = 0;
	Armor_Type_Helmet = 1;
	Armor_Type_Armor = 2;
	Armor_Type_Boots = 3;
}

enum ConsumableType{
	Consumable_Type_None = 0;
	Consumable_Type_Hp_Potion = 1;
	Consumable_Type_Mp_Potion = 2;
}

enum ErrorType{
    Success = 0;
    Fail = 1;
	Db_Error = 2;
	Invalid_Account = 3;
	InvalidToken = 4;

	Invalid_Server_State = 10;

	Already_Exist_Name = 20;

	Invalid_Game_Data = 30;
}